# qipi

./: .gitignore  Cargo.toml  README.md  cliff.toml  justfile  lefthook.yml  package.json  readme.md  rustfmt.toml
.cargo/: config.toml
crates/cli/: Cargo.toml  readme.md
crates/cli/src/: commands.rs  lib.rs  macros.rs  main.rs  parser.rs  parsers.rs  utils.rs
crates/cli/src/cmds/: add.rs  install.rs  mod.rs  remove.rs  uninstall.rs
crates/cli/src/commands/: add.rs  init.rs  install.rs  list.rs  lock.rs  mod.rs  mount.rs  new.rs  remove.rs  run.rs  shell.rs  store.rs  umount.rs  uninstall.rs  update.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs  registry.rs  response.rs  versions.rs
crates/qipi-placeholder/: Cargo.toml  readme.md
crates/qipi-placeholder/src/: main.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: graph.rs  lib.rs  semver.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: logger.rs
scripts/: install.js
src/: main.rs
web/: index.md
web/.vitepress/: config.mts
