[package]
name = "qipi"
description = "🦉 Extremely fast, disk-efficient, node_modules-free, instant, and secure package manager for Node.js — written in Rust."
authors = ["Nehuén <https://github.com/nehu3n>"]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/qipkg/qipi"
readme = "readme.md"
license = "MIT"

[workspace]
members = ["crates/*"]

[dependencies]