[workspace]
members = ["crates/cli", "crates/utils", "crates/resolver"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Nehuén <https://github.com/nehu3n>"]
license = "MIT"
repository = "https://github.com/qipkg/qipi"
homepage = "https://qipi.pages.dev"

[workspace.dependencies]