[package]
name = "qp"
version = "0.1.0"
edition = "2024"
authors = ["Nehuén <https://github.com/nehu3n>"]
license = "MIT"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
paste = "1.0.15"
utils = { path = "../utils" }
async-trait = "0.1.89"
tokio = { version = "1.47.1", features = ["full"] }
client = { path = "../client" }
resolver = { path = "../resolver" }
store = { path = "../store" }
chrono = "0.4.41"
futures = "0.3.31"
