[package]
name = "client"
version = "0.1.0"
edition = "2024"
authors = ["Nehuén <https://github.com/nehu3n>"]
license = "MIT"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
