[package]
name = "resolver"
version = "0.1.0"
edition = "2024"
authors = ["Nehuén <https://github.com/nehu3n>"]
license = "MIT"

[dependencies]
async-recursion = "1.1.1"
tokio = { version = "1.47.1", features = ["full"] }
utils = { path = "../utils" }
client = { path = "../client" }
futures = "0.3.31"
once_cell = "1.21.3"
